--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,53 +1,23 @@
+<!-- Large Feature Box -->
+<div class="hero">
+  <br />
+  <div class="frosty col-10 offset-1 text-center">
+    <br />
+    <h1>Core Trainer</h1>
+    <br />
+    <h2>A tool for Personal Trainers and Members to connect</h2>
+    <br />
+    <div class="btn">
+        <a class="btn btn-start" href="#down">Learn more</a>
+    </div>
+    <br>
+    <br>
+  </div>
+</div>
 <!-- Page Container -->
 <div class="container">
-    
-  <!-- Large Feature Box -->
-  <div class="hero">
-    <br />
-    <div class="frosty col-10 offset-1 text-center">
-      <br />
-      <h1>Core Trainer</h1>
-      <br />
-      <h2>A tool for Personal Trainers and Members to connect</h2>
-      <br />
-      <div class="btn">
-         <a class="btn btn-start" href="#down">Learn more</a>
-      </div>
-      <br>
-      <br>
-    </div>
-  </div>
-  <br />
-
-  <!--First 3 Feature Box -->
-  <div class="row feature text-center col-12 offset-1">
-    <!-- Left Box -->
-    <div class="col-12 col-sm">
-      <h3>Record Workouts</h3>
-    </div>
-    <!-- Center Box -->
-    <div class="col-12 col-sm">
-      <h3>Book Trainers</h3>
-    </div>
-    <!-- Right Box -->
-    <div class="col-12 col-sm">
-      <h3>Measure Progress</h3>
-    </div>
-  </div>
-
-  <!-- Sign up button -->
-  <div class= "text-center">
-    <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-info' %>
-  </div>
-  <br>
-  
- 
-
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/js/bootstrap.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <br>
-  <br>
+  <hr>
+  <hr>
 
   <!-- First Images Display -->
   <div class="container">
@@ -82,29 +52,123 @@
           <br>
           <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           <br>
-          <br>
         </div>
       </div>
     </div>
   </div>
-  
-  <!-- Sign up Button linked to learn more button at top of page via id="down" DO NOT REMOVE -->
+  <hr>
+  <hr>
   <br>
-  <div id="down">
+
+  <!-- Pricing Feature -->
+  <div id="down" class="container">
+    <div class="card-deck mb-3 text-center">
+      <div class="card mb-3 box-shadow">
+        <div class="card-header">
+          <h3 class="my-0 font-weight-normal">Free</h3>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+        </div>
+      </div>
+      <div class="card mb-3 box-shadow">
+        <div class="card-header">
+          <h3 class="my-0 font-weight-normal">Pro</h3>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+        </div>
+      </div>
+      <div class="card mb-3 box-shadow">
+        <div class="card-header">
+          <h3 class="my-0 font-weight-normal">Enterprise</h3>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+        </div>
+      </div>
+    </div>
     <div class="col-10 offset-1">
       <%= link_to "Sign up", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
     </div>
   </div>
-  <br />
-  <br />
+
+  <!-- Services Feature -->
+  <div class="container-fluid text-center">
+    <h3>What we offer</h3>
+    <br><br>
+    <div class="row">
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-off"></span>
+        <h3>POWER</h3>
+        <p>Lorem ipsum dolor sit amet..</p>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-heart"></span>
+        <h3>LOVE</h3>
+        <p>Lorem ipsum dolor sit amet..</p>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-lock"></span>
+        <h3>JOB DONE</h3>
+        <p>Lorem ipsum dolor sit amet..</p>
+      </div>
+    </div>
+    <br><br>
+    <div class="row">
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-leaf"></span>
+        <h3>GREEN</h3>
+        <p>Lorem ipsum dolor sit amet..</p>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-certificate"></span>
+        <h3>CERTIFIED</h3>
+        <p>Lorem ipsum dolor sit amet..</p>
+      </div>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-wrench"></span>
+        <h3>HARD WORK</h3>
+        <p>Lorem ipsum dolor sit amet..</p>
+      </div>
+    </div>
+  </div>
+  <br><br>
+  <hr><hr>
+  <br><br>
+  
+  <!-- About Feature -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-4">
+        <h1>CTFive</h1>
+        <h3>It started with 5</h3>
+        <p>It continues with 2...</p>
+        <br>
+        <button class="btn btn-primary btn-lg">Get in Touch</button>
+      </div>
+      <br>
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-signal logo"></span>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid bg-grey">
+    <div class="row">
+      <div class="col-sm-4">
+        <span class="glyphicon glyphicon-globe logo"></span>
+      </div>
+      <div class="col-sm-8">
+        <h1>Our Values</h1>
+        <h3>Education | Technology | self suffenci </h3>
+      </div>
+    </div>
+  </div>
+  <br><br>
+  <hr><hr>
 
   <div class="image">
     <img class="w-60 p-4" src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
-    <br>
   </div>
 </div>
-<!-- End of 'page container' div above this line -->
-
-
-<br>
-<br>
