--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -8,7 +8,7 @@
         <div class="booyah-box text-left col-10 offset-1">
           <%= simple_form_for edit_client_path(@client) do |f| %> 
             <%= f.error_notification %>
-            <%= f.input :birthday, as: :date, html5: true, input_html: {value: @client.birthday} %>
+            <%= f.input :birthday, as: :date, order: [:month, :day, :year], html5: true, input_html: {value: @client.birthday} %>
             <%= f.input :injuries, :placeholder => "i.e. knee injury", input_html: {value: @client.injuries} %>
             <%= f.input :athletic_background, :placeholder => "i.e. played basketball in high school",  input_html: {value: @client.athletic_background} %>
             <%= f.input :goals, :placeholder => "i.e. have more energy", input_html: {value: @client.goals} %>
