--- a/app/views/trainers/workouts/show.html.erb
+++ b/app/views/trainers/workouts/show.html.erb
@@ -16,5 +16,5 @@
 <% if current_user.trainer? %>
   <%= link_to 'Edit', edit_trainer_workout_path(@workout) %> |
 <% elsif current_user.client? %>
-  <%= link_to 'Schedule Appointment', new_trainer_appointment_path %>
+  <%= link_to 'Schedule Appointment', new_trainer_workout_appointment_path(trainer_path, @workout) %>
 <% end %>
