--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -144,12 +144,11 @@
         <h1>CTFive</h1>
         <h3>Web Development Team</h3>
         <br>
-        <p>This custom website started as a group project, a capstone to our University of Denver Web Development boot camp. After a teammate dropped out, the four remaining persevered to the end of the project timeline. Gaining valuable experience and on the job practice.<p>
-        <p>Michael and Zach continue to tinker and experiment...</p>
+        <p>This website reflects a choice to be different. Our team decided to create a custom project for our capstone experience at the University of Denver Web Development boot camp.<p>
       </div>
       <br><br>
       <h1>Our Mission</h1>
-      <h5>Enabling Personal Empowerment through Education, Technology, and Engaging User Experiences</h5>
+      <h5>Enabling Personal Empowerment through Education, Technology, and Engaging User Experiences.</h5>
       <br>
     </div>
 
