update landing page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -148,7 +148,7 @@
       </div>
       <br><br>
       <h1>Our Mission</h1>
-      <h5>Enabling Personal Empowerment through Education, Technology, and Engaging User Experiences.</h5>
+      <h5>Create a tool that personal trainers and their clients can use to connect and share workouts</h5>
       <br>
     </div>
 
